<resources>
    <string name="app_name">Delivery app</string>

    <string name="sazon_y_sabor">Sazon y Sabor</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="hola_explora_la_comida_de_tus_sue_os">Hola explora la comida de tus sueños</string>
    <string name="registro">Registro</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="apellido">Apellido</string>
    <string name="Nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="comida_diaria">Comida Diaria</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="favorita">Favorita</string>
    <string name="mi_carro">Mi Carro</string>
    <string name="s_t_c">S T C</string>
    <string name="cl2403696_gmail_com">cl2403696@gmail.com</string>
    <string name="salir">Salir</string>
    <string name="busque_su_comida">Busque su Comida</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="enviar_orden">Enviar Orden</string>
    <string name="total">Total</string>
    <string name="my_carro">My Carro</string>
    <string name="perfil">Perfil</string>

</resources>